# kto-titanic

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  devfile.yaml  pyproject.toml
.github/workflows/: ct-ci-cd.yaml  deploy-chatbot.yml  deploy-mcp-server.yml
data/: all_titanic.csv
exercices/: mon_premier_script.py  mon_premier_script_avec_fonction.py
k8s/api/: Dockerfile  api.yaml
k8s/chatbot/: Dockerfile  chatbot.yaml
k8s/experiment/: Dockerfile  kubernetes_config.json  kubernetes_job_template.yaml
k8s/mcp_server/: Dockerfile  mcp-server.yaml
k8s/mlflow/: Dockerfile  dailyclean.yml  minio.yml  mlflow.yml  mysql.yml
k8s/monitoring/: jaeger.yaml
notebooks/: .gitignore  training-titanic-exploration.ipynb
scripts/: install-mlflow.sh  test_kubernetes_mlflow.sh  test_local_mlflow.sh  test_local_training.sh  uninstall-mlflow.sh
src/titanic/: main.py
src/titanic/api/: auth.py  infer.py  main.py
src/titanic/chatbot/: .env.example  agent.py  app.py
src/titanic/ci/: search_mlflow.py
src/titanic/mcp_server/: auth.py  server.py
src/titanic/training/: MLProject  main.py
src/titanic/training/steps/: load_data.py  split_train_test.py  train.py  validate.py
tests/: conftest.py
tests/api/: test_api_main.py  test_auth.py  test_infer.py
tests/chatbot/: test_agent.py
tests/ci/: test_search_mlflow.py
tests/mcp_server/: test_oauth2_token_manager.py  test_server.py
tests/training/: test_main.py
tests/training/steps/: test_load_data.py  test_split_train_test.py  test_train.py  test_validate.py
